# aionlslivetiming

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: py-typed-empty.md
.planning/milestones/: v0.1.0-REQUIREMENTS.md
.planning/phases/01-foundation-package-parser/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-state-filtering/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-transport-replay/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/04-client-distribution/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PER_CAR_STATE_CODES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: index.md  quickstart.md
docs/api/: index.md
docs/examples/: filter_walkthrough.py  replay_offline.py
examples/: __init__.py  live_quickstart.py
examples/data/: sample_event.jsonl
scripts/: build.sh  capture.sh  check_no_ha_imports.sh
src/aionlslivetiming/: __init__.py  client.py  exceptions.py  logging.py  version.py
src/aionlslivetiming/cli/: __init__.py  record.py  (+2 more)
tests/: conftest.py  test_build.py  test_cli_record.py  test_cli_replay.py  test_client.py  test_documentation.py  test_events_common.py  test_events_dataclasses.py  test_examples.py  test_exceptions.py  test_http_laps_data.py  test_jsonl_logger.py  test_jsonl_recorder.py  test_live_reconnect.py  test_live_transport.py  test_lts_not_found.py  test_parser_dispatcher.py  test_parser_initial_state.py  test_parser_logging.py  test_parser_per_car_laps.py  test_parser_qualifying.py  test_parser_race_message.py  test_parser_statistics.py  test_parser_time_sync.py  test_parser_track_state.py  test_parser_unknown.py  test_recording_transport.py  test_replay_transport.py  test_smoke.py  test_state_apply.py  test_state_filters.py  test_state_freshness.py  test_state_idempotency.py  test_state_persistence.py  test_transport_base.py  test_transport_integration.py
(+49 files in other folders)
