[build-system]
requires = ["hatchling>=1.30,<2"]
build-backend = "hatchling.build"

[project]
name = "aionlslivetiming"
version = "0.1.0"
description = "Async-first Python client for the Nürburgring Langstrecken-Serie livetiming service"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "akentner" }]
keywords = [
    "nls",
    "nuerburgring",
    "livetiming",
    "websocket",
    "async",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "pydantic==2.13.4",
    "websockets>=15.0.1,<17",
    "httpx>=0.28,<0.29",
]

[project.optional-dependencies]
orjson = ["orjson>=3.11,<4"]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.4,<2",
    "pytest-cov>=7,<8",
    "respx>=0.23",
    "ruff>=0.15",
    "mypy>=1.1,<2.2",
    "freezegun>=1.5",
]

[project.urls]
Repository = "https://github.com/akentner/aionlslivetiming"
Issues = "https://github.com/akentner/aionlslivetiming/issues"

[project.scripts]
nls-record = "aionlslivetiming.cli.record:main"
nls-replay = "aionlslivetiming.cli.replay:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aionlslivetiming"]

[tool.hatch.build.targets.wheel.force-include]
"src/aionlslivetiming/py.typed" = "aionlslivetiming/py.typed"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
    "ASYNC",
    "TCH",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"src/aionlslivetiming/parser/*" = ["TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "aionlslivetiming.events.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=aionlslivetiming.parser --cov=aionlslivetiming.events --cov=aionlslivetiming.state --cov-report=term-missing"

[tool.coverage.run]
source = ["aionlslivetiming"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
